[XForms] XPath expression errors when expr spans mult instances. Bug 348993, r=doronr+olli